[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scenes/test_scene/test_scene.gd" type="Script" id=1]
[ext_resource path="res://Assets/Theme/ClassicThemeV2/ClassicTheme_V2.tres" type="Theme" id=2]
[ext_resource path="res://GlobalClass/ExtendedButton.gd" type="Script" id=3]
[ext_resource path="res://GameObject/Entity/Entity.tscn" type="PackedScene" id=4]
[ext_resource path="res://Lib/Instanceable/SpriteCycling/SpriteCycling.tscn" type="PackedScene" id=5]
[ext_resource path="res://GameObject/PlayerShip/test-player-ship.tscn" type="PackedScene" id=6]
[ext_resource path="res://GameObject/EnemyCore/test-enemy-static.tscn" type="PackedScene" id=7]
[ext_resource path="res://GameObject/EnemyCore/test-moving-enemy.tscn" type="PackedScene" id=8]

[node name="TestScene" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="Control"]
margin_left = 8.0
margin_top = 144.0
margin_right = 216.0
margin_bottom = 272.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 8.0
margin_top = -56.0
margin_right = -8.0
margin_bottom = 56.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Control/VBoxContainer"]
margin_right = 208.0
margin_bottom = 81.0
size_flags_vertical = 7
text = "This is a test scene.

If you're seeing this message by accident please reload the game."
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuitBtn" type="Button" parent="Control/VBoxContainer"]
margin_left = 68.0
margin_top = 85.0
margin_right = 140.0
margin_bottom = 112.0
size_flags_horizontal = 4
text = "Reload scene"
script = ExtResource( 3 )

[node name="Entity" parent="." instance=ExtResource( 4 )]
position = Vector2( 125.693, 49.3224 )
lv = 300

[node name="Entity2" parent="." instance=ExtResource( 4 )]
position = Vector2( 147.967, 78.7568 )
lv = 300

[node name="SpriteCycling" parent="." instance=ExtResource( 5 )]

[node name="test-player-ship" parent="." instance=ExtResource( 6 )]
position = Vector2( 113.126, 251.532 )
lv = 1

[node name="test-enemy-static" parent="." instance=ExtResource( 7 )]
position = Vector2( 176.782, 31.1504 )
base_atk = 5.0
debris_count = 3

[node name="test-moving-enemy" parent="." instance=ExtResource( 8 )]
position = Vector2( 176.332, 81.3549 )
debris_count = 3

[node name="test-moving-enemy2" parent="." instance=ExtResource( 8 )]
position = Vector2( 162.332, 67.3543 )
debris_count = 3

[node name="test-moving-enemy3" parent="." instance=ExtResource( 8 )]
position = Vector2( 145.304, 56.7593 )
debris_count = 3

[node name="test-moving-enemy4" parent="." instance=ExtResource( 8 )]
position = Vector2( 129.411, 48.813 )
debris_count = 3

[node name="test-moving-enemy5" parent="." instance=ExtResource( 8 )]
position = Vector2( 115.411, 48.0562 )
debris_count = 3

[node name="test-moving-enemy6" parent="." instance=ExtResource( 8 )]
position = Vector2( 97.626, 41.2451 )
debris_count = 3

[node name="test-moving-enemy7" parent="." instance=ExtResource( 8 )]
position = Vector2( 73.7871, 45.7858 )
debris_count = 3

[node name="test-moving-enemy8" parent="." instance=ExtResource( 8 )]
position = Vector2( 52.597, 37.8395 )
debris_count = 3

[node name="test-moving-enemy9" parent="." instance=ExtResource( 8 )]
position = Vector2( 33.6772, 46.1642 )
debris_count = 3

[node name="test-moving-enemy10" parent="." instance=ExtResource( 8 )]
position = Vector2( 15.1358, 34.0556 )
debris_count = 3
[connection signal="pressed" from="Control/VBoxContainer/QuitBtn" to="." method="_on_QuitBtn_pressed"]
